[metadata]
name = mqtt2cmd
version = 0.0.1
summary = MQTT based listener for executing commands
author = Flavio Fernandes
home-page = https://flaviof.com
classifier =
    Environment :: mqtt2cmd
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    mqtt2cmd

[wheel]
universal = 1
